--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
       </section>
       <section id="controls">
         <button @click="attackMonster">ATTACK</button>
-        <button>SPECIAL ATTACK</button>
+        <button
+          :class="{inactive: specialAttackValue < 5}"
+          @click="specialAttackMonster"
+        >
+          SPECIAL ATTACK
+        </button>
         <button>HEAL</button>
         <button>SURRENDER</button>
       </section>
